# chinese-variant

./: Cargo.toml  README.md
.github/workflows/: ci-version.yml  ci.yml
src/: lib.rs
tests/: tests.rs
